# searchclaw

./: .env.example  .gitignore  Dockerfile  Dockerfile.worker  PROJECT-SPEC.md  README.md  alembic.ini  build-all.sh  docker-compose.yml  requirements.txt  test_enhanced_search.py
.github/: dependabot.yml
.github/workflows/: ci.yaml  release.yaml
api/: __init__.py  config.py  main.py
api/middleware/: auth.py  metrics.py  rate_limit.py  security.py
api/models/: agent.py  browse.py  extraction.py  job.py  map.py  org.py  pipeline.py  search.py  user.py
api/routers/: agent.py  auth.py  billing.py  browse.py  crawl.py  extract.py  health.py  jobs.py  map.py  markdown.py  orgs.py  pipeline.py  screenshot.py  search.py  usage.py
api/services/: agent_service.py  billing.py  browser_actions.py  browser_pool.py  cache.py  chunker.py  database.py  extractor.py  geo_enhancer.py  html_cleaner.py  llm_extractor.py  map_service.py  multi_engine_search.py  proxy_manager.py  query_generator.py  query_normalizer.py  rule_extractor.py  schema_validator.py  searxng_client.py  webhook.py
api/tasks/: billing_sync.py
api/tests/: conftest.py  test_agent.py  test_auth.py  test_browse.py  test_cache.py  test_chunker.py  test_crawl.py  test_dashboard.py  test_extract.py  test_health.py  test_jobs.py  test_k8s_manifests.py  test_map.py  test_markdown.py  test_orgs.py  test_pipeline.py  test_proxy.py  test_rate_limit.py  test_screenshot.py  test_search.py  test_search_depth.py  test_searxng.py  test_usage_export.py  test_webhook.py
api/workers/: __init__.py  crawl_worker.py
argocd/: application.yaml  project.yaml
dashboard/: dashboard.html  docs.html  index.html  playground.html
k8s/: configmap.yml  namespace.yml
k8s/api-gateway/: deployment.yml  hpa.yml  service.yml
k8s/base/: configmap.yml  kustomization.yaml  namespace.yml
k8s/cloudflared/: deployment.yml
migrations/: env.py
scripts/: deploy_searxng.sh  provision_hetzner.py  seed_cache.py
sdk/node/: README.md  (+1 more)
sdk/python/: README.md  pyproject.toml
sdk/python/dataclaw/: __init__.py  client.py
sdk/python/searchclaw/: __init__.py  client.py
searxng/: settings.yml
spec-kit/: spec-1-foundation.md  spec-2-extraction.md  spec-3-pipeline-dashboard-k8s.md  spec-4-quick-wins.md  spec-5-map-depth-chunking.md  spec-6-browser-actions.md  spec-7-enterprise.md
(+16 files in other folders)
