[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "searchclaw"
version = "0.2.0"
description = "Python SDK for the SearchClaw API — Search, Extract, Crawl"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "SearchClaw", email = "support@searchclaw.dev"},
]
keywords = ["search", "extract", "crawl", "scraping", "api", "ai", "rag", "pipeline"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.24.0",
]

[project.urls]
Homepage = "https://searchclaw.dev"
Documentation = "https://searchclaw.dev/docs"
Repository = "https://github.com/searchclaw/searchclaw-python"

[tool.setuptools.packages.find]
include = ["searchclaw*"]
